新建项目矿建

--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,7 @@
   <modules>
   	<module>mavenCommon</module>
   	<module>mavenDao</module>
+  	<module>mavenService</module>
+  	<module>mavenController</module>
   </modules>
 </project>
